feat: implement admin and clinic dashboard services with associated UI pages and data structures